--- a/kubernetes/apps/monitoring/gatus/app/config/config.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/config/config.yaml
@@ -41,6 +41,24 @@ endpoints:
       dns-resolver: tcp://192.168.2.1:53
     conditions:
       - "[STATUS] == 200"
+  - name: minio-admin
+    group: services
+    url: "tcp://minio.kube-system.svc.cluster.local:9001"
+    interval: 1m
+    ui:
+      hide-hostname: true
+      hide-url: true
+    conditions:
+      - "[CONNECTED] == true"
+  - name: minio-s3
+    group: services
+    url: "tcp://minio.kube-system.svc.cluster.local:9000"
+    interval: 1m
+    ui:
+      hide-hostname: true
+      hide-url: true
+    conditions:
+      - "[CONNECTED] == true"
   - name: website
     group: services
     url: "tcp://website-nginx.default.svc.cluster.local:80"
@@ -124,6 +142,14 @@ endpoints:
       hide-url: true
     conditions:
       - "[CONNECTED] == true"
+  - name: postgresql-admin
+    group: apps
+    url: https://pgadmin.${SECRET_DOMAIN}
+    interval: 1m
+    client:
+      dns-resolver: tcp://192.168.2.1:53
+    conditions:
+      - "[STATUS] == 200"
   - name: redis
     group: database
     url: "tcp://redis-master.database.svc.cluster.local:6379"
@@ -190,13 +216,14 @@ endpoints:
     conditions:
       - "[STATUS] == 200"
   - name: hydra
-    group: apps
-    url: https://hydra.${SECRET_DOMAIN}
+    group: media
+    url: "tcp://hydra.media.svc.cluster.local:5076"
     interval: 1m
-    client:
-      dns-resolver: tcp://192.168.2.1:53
+    ui:
+      hide-hostname: true
+      hide-url: true
     conditions:
-      - "[STATUS] == 200"
+      - "[CONNECTED] == true"
   - name: prowlarr
     group: apps
     url: https://prowlarr.${SECRET_DOMAIN}
@@ -232,6 +259,14 @@ endpoints:
   - name: baserow
     group: apps
     url: https://baserow.${SECRET_DOMAIN}
+    interval: 1m
+    client:
+      dns-resolver: tcp://192.168.2.1:53
+    conditions:
+      - "[STATUS] == 200"
+  - name: home-assistant
+    group: apps
+    url: https://hass.${SECRET_DOMAIN}
     interval: 1m
     client:
       dns-resolver: tcp://192.168.2.1:53
