--- a/kubernetes/apps/monitoring/gatus/app/config/config.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/config/config.yaml
@@ -143,7 +143,7 @@ endpoints:
     conditions:
       - "[CONNECTED] == true"
   - name: postgresql-admin
-    group: apps
+    group: database
     url: https://pgadmin.${SECRET_DOMAIN}
     interval: 1m
     client:
