--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   # - ./budibase/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
+  - ./jupyerhub/ks.yaml
   - ./lldap/ks.yaml
   - ./n8n/ks.yaml
   #- ./superset/ks.yaml
