--- a/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
@@ -66,6 +66,7 @@ spec:
       # extraEnv:
       #   EDITOR: "vim"
       storage:
+        type: dynamic
         extraVolumes:
           - name: jupyterhub
             persistentVolumeClaim:
