--- a/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
@@ -96,3 +96,8 @@ spec:
       tls:
         - hosts:
             - *host
+    storage:
+      type: dynamic
+      capacity: 5Gi
+      dynamic:
+        storageClass: local-path
