--- a/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
@@ -27,8 +27,8 @@ spec:
   values:
     hub:
       db:
-        pvc:
-          storageClassName: local-path
+        type: postgres
+        url: "postgresql+psycopg2://${SECRET_POSTGRES_USERNAME}:${SECRET_POSTGRES_PASSWORD}@${SECRET_POSTGRES_HOSTNANE}:5432/jupyter"
       nodeSelector:
         kubernetes.io/arch: amd64
       config:
