--- a/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
@@ -60,6 +60,9 @@ spec:
                   - i386
                   - i686
                   - x86
+      defaultUrl: "/lab"
+      extraEnv:
+        JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
       image:
         #https://jupyter-docker-stacks.readthedocs.io/en/latest/using/selecting.html
         name: jupyter/pyspark-notebook
