--- a/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
@@ -36,24 +36,24 @@ spec:
       #   url: "postgresql+psycopg2://${SECRET_POSTGRES_USERNAME}:${SECRET_POSTGRES_PASSWORD}@${SECRET_POSTGRES_HOSTNAME}:5432/jupyter"
       nodeSelector:
         kubernetes.io/arch: amd64
-      # config:
-      #   Authenticator:
-      #     admin_users:
-      #       - ${SECRET_AUTHELIA_DISPLAY_NAME}
-      #   GenericOAuthenticator:
-      #     client_id: jupyterhub
-      #     client_secret: ${SECRET_JUPYTERHUB_OAUTH_CLIENT_SECRET}
-      #     oauth_callback_url: "https://jupyterhub.${SECRET_DOMAIN}/hub/oauth_callback"
-      #     authorize_url: https://auth.${SECRET_DOMAIN}/api/oidc/authorization
-      #     token_url: https://auth.${SECRET_DOMAIN}/api/oidc/token
-      #     userdata_url: https://auth.${SECRET_DOMAIN}/api/oidc/userinfo
-      #     scope:
-      #       - openid
-      #       - profile
-      #       - email
-      #     #username_key: preferred_username
-      #   JupyterHub:
-      #     authenticator_class: generic-oauth
+      config:
+        Authenticator:
+          admin_users:
+            - ${SECRET_AUTHELIA_DISPLAY_NAME}
+        GenericOAuthenticator:
+          client_id: jupyterhub
+          client_secret: ${SECRET_JUPYTERHUB_OAUTH_CLIENT_SECRET}
+          oauth_callback_url: "https://jupyterhub.${SECRET_DOMAIN}/hub/oauth_callback"
+          authorize_url: https://auth.${SECRET_DOMAIN}/api/oidc/authorization
+          token_url: https://auth.${SECRET_DOMAIN}/api/oidc/token
+          userdata_url: https://auth.${SECRET_DOMAIN}/api/oidc/userinfo
+          scope:
+            - openid
+            - profile
+            - email
+          #username_key: preferred_username
+        JupyterHub:
+          authenticator_class: generic-oauth
     singleuser:
       extraNodeAffinity:
         required:
