--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,12 +4,12 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./appsmith/ks.yaml
-  - ./authelia/ks.yaml
+  #- ./authelia/ks.yaml
   - ./baserow/ks.yaml
   # - ./budibase/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
-  - ./jupyterhub/ks.yaml
+  #- ./jupyterhub/ks.yaml
   - ./lldap/ks.yaml
   - ./n8n/ks.yaml
   #- ./superset/ks.yaml
