--- a/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jupyterhub/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
         pvc:
           #storageClassName: local-path
           storageClassName: network-storage
-          subPath: "/jupyterhub/db"
+          subPath: "./jupyterhub/db"
       # db:
       #   type: postgres
       #   url: "postgresql+psycopg2://${SECRET_POSTGRES_USERNAME}:${SECRET_POSTGRES_PASSWORD}@${SECRET_POSTGRES_HOSTNAME}:5432/jupyter"
