--- a/kubernetes/apps/monitoring/influxdb/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/influxdb/app/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
     ingress.kubernetes.io/force-ssl-redirect: "false"
     ingress.kubernetes.io/ssl-redirect: "false"
     external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
-    hajimari.io/enable: "true"
+    hajimari.io/enable: "false"
 spec:
   ingressClassName: external
   rules:
