home-assistant haji icon

--- a/kubernetes/apps/networking/nginx/internal/plex.yaml
+++ b/kubernetes/apps/networking/nginx/internal/plex.yaml
@@ -45,6 +45,7 @@ metadata:
   annotations:
     #external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     nginx.ingress.kubernetes.io/app-root: /web
+    hajimari.io/icon: mdi:plex
 spec:
   ingressClassName: internal
   rules:
