--- a/kubernetes/apps/database/postgresql/pgadmin/ingress.yaml
+++ b/kubernetes/apps/database/postgresql/pgadmin/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     #external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
+    hajimari.io/icon: simple-icons:adminer
 spec:
   ingressClassName: internal
   rules:
