--- a/kubernetes/apps/database/couchdb/app/helmrelease.yaml
+++ b/kubernetes/apps/database/couchdb/app/helmrelease.yaml
@@ -74,6 +74,7 @@ spec:
       main:
         enabled: true
         ingressClassName: internal
+        hajimari.io/enable: "false"
         hosts:
           - host: &host couchdb.${SECRET_DOMAIN}
             paths:
