couchdb haji off

--- a/kubernetes/apps/database/couchdb/app/helmrelease.yaml
+++ b/kubernetes/apps/database/couchdb/app/helmrelease.yaml
@@ -74,7 +74,8 @@ spec:
       main:
         enabled: true
         ingressClassName: internal
-        hajimari.io/enable: "false"
+        annotations:
+          hajimari.io/enable: "false"
         hosts:
           - host: &host couchdb.${SECRET_DOMAIN}
             paths:
