--- a/kubernetes/apps/default/whoami/app/ingress.yaml
+++ b/kubernetes/apps/default/whoami/app/ingress.yaml
@@ -12,6 +12,7 @@ metadata:
     # nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
     # nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
     hajimari.io/enable: "true"
+    hajimari.io/icon: mdi:ip-network
 spec:
   ingressClassName: external
   rules:
