gatus multi-domain

--- a/kubernetes/apps/monitoring/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/helmrelease.yaml
@@ -121,7 +121,7 @@ spec:
                   port: http
         tls:
           - hosts:
-              - *host
+              - *host1
               - *host2
     serviceAccount:
       create: true
