grafana smtp on

--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -40,6 +40,7 @@ spec:
       GF_EXPLORE_ENABLED: true
       GF_SERVER_ROOT_URL: "https://grafana.${SECRET_DOMAIN}"
       GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ${SECRET_GRAFANA_OAUTH_CLIENT_SECRET}
+      GF_SMTP_ENABLED: true
       GF_SMTP_HOST: "${SECRET_MAIL_HOST}:${SECRET_MAIL_PORT}"
       GF_SMTP_FROM_ADDRESS: grafana@${SECRET_DOMAIN}
       GF_SMTP_FROM_NAME: grafana
