--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -120,7 +120,7 @@ spec:
               path: /var/lib/grafana/dashboards/nginx
           - name: nginx-default
             orgId: 1
-            folder: Nginx
+            folder: Nginx-default
             type: file
             disableDeletion: false
             editable: true
