authelia minio client

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -12,6 +12,7 @@ stringData:
     SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:ydnue3KL+1DYwDPjLa1MipvQUyc=,iv:eVPL2b6/BHni+RHpOAP0KLNZmeiRPl1GEF+uCVopJx4=,tag:fI2tg68ozAtVupdTiaEkrg==,type:str]
     SECRET_JUPYTERHUB_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:MblAjHT0T7AUkBiUUSNrThQWYaeUW98JfbpSjuo19tUUCnoP+ue14ELPunp+EuKUHNsq88UDOie/Uf318iQykw==,iv:GJ/UWWYK9QpjIacJMdVAo1tckDzuCgFQqVAtTgRHD1Y=,tag:EkdCwmflyb97w7a2jZrdQQ==,type:str]
     SECRET_GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:pmmt8CJM5j9lCRXB/6xTu3utfGJesT8LzF6LwiBlqABijadUE13otqq9AaiM8cPrq02uqv5WovZ/W/KH1xgU9A==,iv:6OkeJ4dWGJnD+oA4QUsYVbgk/RYr/Lig74vb0c4TOL8=,tag:oNX0Z4W4S/EOePotWqa3MA==,type:str]
+    SECRET_MINIO_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:5vWLyjuswwBdVa+w20ZfEdRFUDeoEBvE1uhsn4bS/O2puqgZHvW+nGMQ3l6cTYS4fB8UQsm4ADZRj/w4Nl6Ang==,iv:/nZd8mDfvGD6a+L9U5hLw3Y8ld5ln8vjXYB00AtT1aI=,tag:XJ0Eazl3TSsjtMQHlIhNsQ==,type:str]
     SECRET_MAIL_USERNAME: ENC[AES256_GCM,data:XSLpQqqe3erCjq6+0nd1Pr/5KBUxA0YrcxxJd9zZdec=,iv:TFw0wlwQixz833vjKAIOB9TxridMzyEL2uO2067fsGY=,tag:1TWR7vYybbkbaSxEQmSExQ==,type:str]
     SECRET_MAIL_PASSWORD: ENC[AES256_GCM,data:P7SsXrTW8anidGXfAe2EI7DD6QCKND1//RYZjcgCqiA=,iv:rAVmouPXjALSb1Rtnpb0jQuUSxUXDPclkAXqlisnTbg=,tag:sRAvoYnfcscODB2gcRMG5Q==,type:str]
     SECRET_MAIL_HOST: ENC[AES256_GCM,data:ynJwMCwXLQ6ScnNJ22SwYKI=,iv:sSVGVHHOoHhCvBhZORzevjom48OJhS3F3guJCPahp8w=,tag:dcv35A2hBkwvI1yV+maciw==,type:str]
@@ -31,8 +32,8 @@ sops:
             R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
             sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-29T18:31:28Z"
-    mac: ENC[AES256_GCM,data:M0MiQhQJASRoRNOCnTSv+wf3HPHcV+dD7jEWsAbPG7U59K3sEkkPOP9r4fNzYzwPyOQlr7GATC1ooemPkYtaFhFYdWM/Qnb3qLk6kGhZx29YAPJrRCqBbOJJeOOyov13WUChcop6l70Shk6Fph+IPSHZm6VZNf5zqtHaffxNncg=,iv:DPiKQNPVMmRbR5V3VbQ+2wjsMYWshCRlyhax1aZ/qzc=,tag:imWNF0it3sWHvcIMeQUAwQ==,type:str]
+    lastmodified: "2023-11-02T17:48:18Z"
+    mac: ENC[AES256_GCM,data:BLsIr7kGxfMEYhDwRcE29fNZfqHRFk/HtHTTyoGGvGToSX2JD4pEggSH/lpAdC45DtImcdtIqcMtNZHKtii2VugoDuaDlC/UJWFfbX6pvcFGjuJt/HmIJ2n16ZRrU/ZrWIqGeIkC6opOC5/MDsY1DGfuf6KnE0QxEg5ST2FFDoA=,iv:l0Swby6OcLh5b6vbO+vEPqiSCi7vaPE+f2EmcbxWRXE=,tag:zo3pLg5Ryk0StQLy3YDPsw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
