--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -55,3 +55,17 @@ identity_providers:
         scopes: ["openid", "profile", "groups", "email"]
         redirect_uris: ["https://jupyterhub.${SECRET_DOMAIN}/hub/oauth_callback"]
         userinfo_signing_algorithm: none
+      - id: minio
+        description: Minio
+        secret: "${SECRET_MINIO_OAUTH_CLIENT_SECRET}"  # The digest of 'insecure_secret'.
+        public: false
+        authorization_policy: one_factor
+        pre_configured_consent_duration: 1y
+        redirect_uris:
+          - https://minio.${SECRET_DOMAIN}/apps/oidc_login/oidc
+        scopes:
+          - openid
+          - profile
+          - email
+          - groups
+        userinfo_signing_algorithm: none
