--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -61,11 +61,6 @@ identity_providers:
         public: false
         authorization_policy: one_factor
         pre_configured_consent_duration: 1y
-        redirect_uris:
-          - https://minio.${SECRET_DOMAIN}/apps/oidc_login/oidc
-        scopes:
-          - openid
-          - profile
-          - email
-          - groups
+        redirect_uris: ["https://minio.${SECRET_DOMAIN}/oauth_callback"]
+        scopes: ["openid", "profile", "groups", "email"]
         userinfo_signing_algorithm: none
