--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -37,6 +37,7 @@ spec:
       MINIO_IDENTITY_OPENID_CONFIG_URL: https://auth.${SECRET_DOMAIN}/.well-known/openid-configuration
       MINIO_IDENTITY_OPENID_CLIENT_ID: minio
       MINIO_IDENTITY_OPENID_CLIENT_SECRET: "${SECRET_MINIO_OAUTH_CLIENT_SECRET}"
+      MINIO_IDENTITY_OPENID_CLAIM_NAME: "groups"
       MINIO_IDENTITY_OPENID_CLAIM_PREFIX: authelia
       MINIO_IDENTITY_OPENID_SCOPES: openid,profile,email
       MINIO_IDENTITY_OPENID_REDIRECT_URI: https://minio.${SECRET_DOMAIN}/oauth_callback
