--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -30,6 +30,10 @@ access_control:
     - name: internal
       networks: ["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"]
 
+regulation:
+  max_retries: 3
+  find_time: 2m
+  ban_time: 5m
 
 identity_providers:
   oidc:
