renovate ignore archive

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -20,6 +20,9 @@
   "suppressNotifications": ["prIgnoreNotification"],
   "rebaseWhen": "conflicted",
   "schedule": ["on saturday"],
+  "ignorePaths": [
+    "**/_archive/**"
+  ],
   "flux": {
     "fileMatch": [
       "(^|/)addons/.+\\.ya?ml(\\.j2)?(\\.j2)?$",
